[package]
name = "blutgang"
version = "0.2.0"
edition = "2021"
authors = ["makemake <vukasin@gostovic.me>, Rainshower Labs, github contributors"]
license = "AGPL-3.0-only"
description = "Fast, minimalist weighted round robin load balancing with caching for Ethereum JSON-RPC calls."
readme = "README.md"
homepage = "https://github.com/rainshowerLabs/blutgang"
repository = "https://github.com/rainshowerLabs/blutgang"
keywords = ["cli", "ethereum"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.3.0"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
http-body-util = "0.1.0-rc.3"
# hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sled = { version = "0.34.7", features = ["compression"] }
tokio = { version = "1.28.1", features = ["full"] }
url = "2.4.0"
blake3 = "1.4.1"
jemallocator = "0.5.4"
toml = "0.7.6"
memchr = "2.5.0"
rand = {version = "0.8.5", optional = true}
chrono = "0.4.28"
regex = "1.9.5"
tokio-stream = {version = "0.1.14", features = ["sync"]}
hyper-util-blutgang = "0.1.3"
simd-json = { version = "0.12.0", features = ["approx-number-parsing", "serde_impl"] }
xxhash-rust = { version = "0.8.7", features = ["xxh3", "const_xxh3"], optional = true }
zerocopy = { version = "0.7.20", optional =  true }
jsonwebtoken = "9.1.0"

# Maxperf profile for absolute maximum performance
# Only use for builds that are going to get used by end users
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

# Optional Blutgang features
[features]
default = ["selection-weighed-round-robin"]
xxhash = ["xxhash-rust", "zerocopy"] # 4x faster caching but potentially less secure
no-cache = [] # enable this to disable caching
debug-verbose = [] # Verbose terminal debug output
selection-weighed-round-robin = [] # default algo
selection-random = ["rand"] # optional random algo
# add your own below
